#9706: resolve reviewer comments Description: - Handle highlight selected hours component - Fix not alignment in dateTime picker - Fix not alignment selected date in calendar for date/ dateTime pickers - Minimize calendar row height to improve showing date picker UI - Create a util function  'getLocalTimePart' to get time part for local time

--- a/web/client/themes/default/less/featuregrid.less
+++ b/web/client/themes/default/less/featuregrid.less
@@ -121,7 +121,12 @@
     
      
 }
-
+/* minimize calendar row height in feature-grid that renders within popover */
+.ms-popover-overlay{
+    div.picker-container .rw-calendar.rw-widget tbody span.rw-btn{
+        line-height: 2em;
+    }
+}
 // **************
 // FeatureEditorFallback Layout
 // **************
